hphp/test/quick/redeclared_class_b.php.expectf
Fatal error: Class already declared: X in %s on line 2
